# uptime-saas-rust

./: .gitignore  Cargo.toml  README.md
data/: uptime.db  uptime.db-shm  uptime.db-wal
migrations/: 001_init.sql
src/: main.rs
src/web/: app.js  index.html  styles.css
